[package]
name = "hashtag_blessed_ii"
version = "0.1.0"
authors = ["shinyquagsire23 <mtinc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
synctools = "0.1.0"
wchar = "0.6.1"

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.11"
features = ["const_mut_refs"]

[dependencies.lazy_static]
version = "0.2.1"
features = ["spin_no_std"]
