[package]
name = "hashtag_blessed_ii"
version = "0.1.0"
authors = ["shinyquagsire23 <mtinc2@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wchar = "0.6.1"
spin = "0.9.0"
async-trait = "0.1.48"

[dependencies.linked_list_allocator]
default-features = false
version = "0.8.11"
features = ["const_mut_refs"]

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.2.1"
default-features = false
features = ["alloc"]

[dependencies.derive_more]
version = "0.99.0"
