[package]
name = "debug_client"
version = "0.1.0"
authors = ["shinyquagsire23 <mtinc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.8"
ncurses = "5.86.0"
signal-hook = "0.3.4"
binread = "2.0.0"
