[package]
name = "debug_client"
version = "0.1.0"
authors = ["shinyquagsire23 <mtinc2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusb = "0.8"
signal-hook = "0.3.4"
binread = "2.0.0"
crossterm = "0.18"
rand = "0.7"
tui = { version = "0.14.0", default-features = false, features = ['crossterm'] }
